# arcdreamer

./: .gitignore  AGENTS.MD  CONTEXT.MD  README.md  TASKS.MD  pyproject.toml
GPT-PRO-PATCH-SET/: ARC_DREAMER_SCIENTIST_EDITS_AND_CODE.md  pyproject.toml
arcagi/: __init__.py  __main__.py  cli.py
arcdreamer_goal_scientist_update/: GOAL_SCIENTIST_REVIEW_AND_UPDATE.md
artifacts/: arc_rank_trace_ar25_48.jsonl  object_event_action_basis_runtime_probe.pkl  object_event_basis_recovery_runtime_probe.pkl  object_event_family_belief_runtime_probe.pkl  object_event_family_regularized_runtime_probe.pkl  object_event_info_gain_diagnostic_runtime_probe.pkl  object_event_noeffect_contradiction_runtime_probe.pkl
docs/: ACTION_LEVEL_SPOTLIGHT.md  ARC_COMPETITION_RUNTIME.md  ARC_LEVEL_TRANSITION_VERIFICATION_2026-04-24.md  CHECKPOINT_LINEAGE.md  GOAL_SCIENTIST_TRAINING.md  GPT_PRO_ADVICE_2026-04-24.md  GPT_PRO_CONSENSUS_2026-04-24.md  GPT_PRO_LEVEL1_TO_FULLWIN_2026-04-24.md  GPT_PRO_MINIMAL_STOP_2026-04-24.md  GPT_PRO_REVIEW_B5453D3_2026-04-24.md  GPT_PRO_SECOND_OPINION_2026-04-24.md  MINIMALLY_CONSCIOUS_ONLINE_AGENT.md  ONLINE_RUNTIME_LEARNING.md  OPERATOR_ACTION_LOG.md  PIVOT_GENERAL_REASONING.md  PLAN.md  REPORT.md
scripts/: diagnose_object_event_trace.py  finetune_recurrent_from_arc_trace.py  train_learned_online_minimal.py  train_learned_online_object_event.py  train_learned_online_recurrent.py
tests/: test_action_encoder.py  test_action_spotlight.py  test_arc_adapter_helpers.py  test_arc_public_training.py  test_base_agent.py  test_causal_theory_manager.py  test_encoder.py  test_eval_path_constraints.py  test_generic_perception.py  test_perception.py  (+35 more)
(+105 files in other folders)
