[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "arcagi"
version = "0.1.0"
description = "Local ARC-AGI-3 hybrid agent research stack with explicit exploration, world modeling, memory, and grounded language."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "OpenAI Codex" }]
dependencies = [
  "numpy>=1.26",
  "torch>=2.5",
]

[project.optional-dependencies]
arc = [
  "arc-agi>=0.9.7; python_version >= '3.12'",
]
dev = [
  "pytest>=8.2",
]

[project.scripts]
arcagi = "arcagi.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["arcagi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
